--- a/assignments/06_kocher/theorie.tex
+++ b/assignments/06_kocher/theorie.tex
@@ -857,7 +857,7 @@ unver{\"a}ndert, d.h. $D_{NR} = D$.
 
 F{\"u}r diesen Fall gilt also f{\"u}r $N$ Rotationen, dass $C$
 $N$-mal um 1 l{\"a}nger wird, d.h.
-$C_{NR} = C + \sum^{N - 1}_{i = 1} 1 = C + N = N$. $D_{NR}$ bleibt hingegen
+$C_{NR} = C + \sum\limits_{i = 1}^{N} 1 = C + N = N$. $D_{NR}$ bleibt hingegen
 immer gleich bleibt, d.h. $D_{NR} = D = 0$.
 
 Daraus folgt: $C_{NR} + D_{NR} = N = N$ f{\"u}r $N$ Rotationen. \hfill$\Box$
