Fix last step of Aufgabe 11 (iii) (k_point has to be a right child, since it is a rotation to the right)

--- a/assignments/06_kocher/theorie.tex
+++ b/assignments/06_kocher/theorie.tex
@@ -599,7 +599,7 @@ Entferne Wurzel aus Treap:
       child { node [left= .75mm] { j \\ 19}
       child { node [left= .75mm] { i \\22}
       child { node [left= .75mm] { h \\ 25 }
-      child { node [left= .75mm] {$\dot{k}_{-\infty}$}  }
+      child { node [right= .75mm] {$\dot{k}_{-\infty}$}  }
       }}}}};
       
     \end{tikzpicture}
